--- a/jk03-7.html
+++ b/jk03-7.html
@@ -7,17 +7,16 @@
             width: 320px;
             height: 50px;
             padding: 10px;
-            border: 5px blueviolet;
+            border: 5px solid gray;
             margin: 0;
         }
     </style>
 </head>
 
 <body>
-    <h2>Harry Potter</h2>
-    <img src="C:\Users\ADMIN\Pictures">
-    <div>Harry Potter is a series of seven fantasy novels written by British author J. K. Rowling. The novels chronicle the lives of a young wizard, Harry Potter, and his friends Hermione Granger and Ron Weasley, all of whom are students at Hogwarts School
-        of Witchcraft and Wizardry.</div>
+    <h1>HARRY POTTER</h1>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTNPHtVyd0uIRcFDEdcLDhOnGr8bOCh-02eWg&usqp=CAU" width="250px" height="250px" alt="20px">
+    <div>the picture is 375px</div>
 </body>
 
 </html>
