--- a/jk03-7.html
+++ b/jk03-7.html
@@ -14,9 +14,9 @@
 </head>
 
 <body>
-    <h1>HARRY POTTER</h1>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTNPHtVyd0uIRcFDEdcLDhOnGr8bOCh-02eWg&usqp=CAU" width="250px" height="250px" alt="20px">
-    <div>the picture is 375px</div>
+    <h1 class="center">KING KOHLI</h1>
+    <img src="https://feeds.abplive.com/onecms/images/uploaded-images/2023/08/18/b9619d4df6087cb9bb4284b4f262b411169233418308724_original.jpg" width="250px" height="250px" alt="20px">
+    <div>G.O.A.T</div>
 </body>
 
 </html>
